--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5"
   },
+  "nodemonConfig": {
+    "ignore": ["data.json"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/juliocesarfs/fenix.git"
